...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_location"
        android:id="@+id/locationTV"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"/>
...
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="90sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_temp"
        android:id="@+id/tempTV"
        android:layout_below="@+id/changeCityButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
